<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#c5c7c7"
    android:layout_gravity="clip_vertical">
    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="fill_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/HomeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/register_title"
                android:layout_gravity="center_horizontal"
                android:textSize="50sp"
                android:layout_marginBottom="60dp"/>

            <EditText
                android:id="@+id/mail_reg_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_mail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"/>
            <EditText
                android:id="@+id/password_reg_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_pass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>
            <EditText
                android:id="@+id/password_reg_field_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_pass_confirm"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>
            <Button
                android:id="@+id/register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_register"
                android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/back_to_login_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

        </LinearLayout>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_With_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="16dp" />
            <com.google.android.gms.common.SignInButton
                android:id="@+id/login_With_gmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
