<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#FFFF">
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="30dp"
                app:srcCompat="@drawable/hexagonal_logo_letter_s" >

            </ImageView>

            <EditText
                android:id="@+id/mail_login_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_mail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"/>
            <EditText
                android:id="@+id/password_login_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_pass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>


            <Button
                android:id="@+id/login_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/register_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:singleLine="true"
                android:clickable="true"
                android:focusable="true"
                android:linksClickable="true"
                android:text="@string/action_register"
                android:textSize="20sp"
                android:textColor="#002594" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
